login.css
body{
	background-color: #fff;
}
.title-login{
	color: #3C5999;
	font-weight: 500;
	margin-top: 50px;
	margin-bottom: 20px;
}
.login-wrap{
	border-radius: 5px;
	background-color: #e9ebee69;
	padding: 35px;
	margin-bottom: 15px;
}
#form_login > button[type="submit"]{
	background-color: #3C5999;
	border: #3C5999;
	display: block;
	margin: auto;
	margin-bottom: 10px;
	padding: 8px 24px;
}
#forgot_password,#create_account{
	color: #3C5999;
	display: block;
	text-align: center;
	text-decoration: none;
}
input.error {
    border:2px solid red;
}
span.error-validattion-arrow {
    height:17px;
    top:4px;
}
label.error {  
    color:red;
    padding:1px 5px 1px 5px;
    font-size:small;

} 
h1.icon-user{
	font-size: 4.5rem;
	margin-bottom: 20px;
	color: lightgray;
}

